now builds all binaries and puts them in bin/

--- a/source/makefile
+++ b/source/makefile
@@ -3,31 +3,46 @@ LN=gfortran
 LIBS=lib/geomlib.a lib/mainlib.a 
 MODS=lib/geom.mod lib/main.mod
 
-.PHONY: clean chap04
+.PHONY: clean chap04 progs
 default: p41
 
-all: geomlib.a mainlib.a apps
+all: $(LIBS) $(PROGS)
 
-lib/geomlib.a:
+install: progs libs
+# TODO we need an install rule in order to publish the binaries 
+#   somewhere on a $PATH. Consider too publishing lib
+
+lib/geomlib.a: library/geom/*.f03
 	cd lib &&\
 	$(FC) -c ../library/geom/*.f03 && \
 	ar -r geomlib.a *.o &&\
 	rm *.o
 
-lib/mainlib.a:
+lib/mainlib.a: library/main/*.f03
 	cd lib &&\
 	$(FC) -c ../library/main/*.f03 &&\
 	ar -r mainlib.a *.o &&  rm *.o
 
-p41: $(LIBS)
+# just an individual program
+bin/p41: $(LIBS)
 	$(FC) -Ilib -o $@ chap04/p41.f03 $(LIBS) 
 	
+# all prgrams in the whole book
+progs: $(LIBS) 
+	for i in chap*/*.f03; do \
+	  bin=$$(basename $$i .f03); \
+	  $(FC) -Ilib $$i $(LIBS) -o bin/$${bin}; \
+	done
+	
+# all programs in one chapter
 chap04: $(LIBS) 
 	for i in chap04/*.f03; do \
-	  $(FC) -Ilib $$i $(LIBS); \
+	  bin=$$(basename $$i .f03); \
+	  $(FC) -Ilib $$i $(LIBS) -o bin/$${bin}; \
 	done
 	
 clean:
-	-rm  lib/*.o 
-veryclean: clean
-	-rm $(LIBS) $(MODS)
+
+# This removes everything build. Noote how we presreve bin/README.md
+distclean: clean
+	-rm $(LIBS) $(MODS) bin/*\.*
